bones are not selectable in weight paint mode anymore #37031

Closed
opened 2013-10-10 15:47:39 +02:00 by Markus Rietz · 5 comments

%%%--- Operating System, Graphics card ---
windows7, nvidea gtx 460

- Blender version with error, and version that worked ---

This error occures at least in in Blender version: 2.67a up to 2.69.0 r60602

The last tested version the error was not in: 2.66.3 r55460

- Short description of error ---

Bones are not selectable in weight paint mode anymore. It will still be possible if you change to the pose mode of the armature and select the bone to weight paint there. However this is much more complicated and takes much more time.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Just install 2.69.0 r60602 crate a armatue, parent a mesh object to it in a way that uses the armature modifier, set the amatue to pose mode, select tht mesh object change to weight paint and try to select another bone. (it won't work)

%%%

%%%--- Operating System, Graphics card --- windows7, nvidea gtx 460 - Blender version with error, and version that worked --- This error occures at least in in Blender version: 2.67a up to 2.69.0 r60602 The last tested version the error was not in: 2.66.3 r55460 - Short description of error --- Bones are not selectable in weight paint mode anymore. It will still be possible if you change to the pose mode of the armature and select the bone to weight paint there. However this is much more complicated and takes much more time. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Just install 2.69.0 r60602 crate a armatue, parent a mesh object to it in a way that uses the armature modifier, set the amatue to pose mode, select tht mesh object change to weight paint and try to select another bone. (it won't work) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%It works for me (linux64)… Could you please attach a file that does not work?

It may also be an issue with your graphic card/driver, please attach the result of Help -> System Info (available in a Text window).%%%

%%%It works for me (linux64)… Could you please attach a file that does not work? It may also be an issue with your graphic card/driver, please attach the result of Help -> System Info (available in a Text window).%%%
Author

%%%Seems like the problem is in the data of the file maybe i started with an oder version on my laptop.... Actually I made a new scene and it worked. Still attach a file containing the problem and another mesh, because in the original mesh and animation altready put quite some work already. I guess I have to imopt it to a new scene.
I am sorry for that.%%%

%%%Seems like the problem is in the data of the file maybe i started with an oder version on my laptop.... Actually I made a new scene and it worked. Still attach a file containing the problem and another mesh, because in the original mesh and animation altready put quite some work already. I guess I have to imopt it to a new scene. I am sorry for that.%%%

%%%fixed 60673.

The issue was the brush had a stencil texture and the stencil operator was being called rather then select.%%%

%%%fixed 60673. The issue was the brush had a stencil texture and the stencil operator was being called rather then select.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37031
No description provided.