fix [#37031] bones are not selectable in weight paint mode anymore